--- a/viewer/templates/app/dashboard/administrador.html
+++ b/viewer/templates/app/dashboard/administrador.html
@@ -23,8 +23,89 @@
         <div class="card m-b-0 b-r-0">
             <div class="card-body">
                 <div class="row">
+                    <h6>1.- getClientIds:</h6>
                     <div class="col-md-12">
-                        <!-- mostrar resultados separados con titulo en cada card -->
+                        <p>{{data.getClientIds}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card m-b-0 b-r-0">
+            <div class="card-body">
+                <div class="row">
+                    <h6>2.- getClientSortByRut:</h6>
+                    <div class="col-md-12">
+                        <p>{{data.getClientSortByRut}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card m-b-0 b-r-0">
+            <div class="card-body">
+                <div class="row">
+                    <h6>3.- getClientSortByRentExpenses:</h6>
+                    <div class="col-md-12">
+                        <p>{{data.getClientSortByRentExpenses}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card m-b-0 b-r-0">
+            <div class="card-body">
+                <div class="row">
+                    <h6>4.- getCompanyClientsSortByNames:</h6>
+                    <div class="col-md-12">
+                        <p>{{data.getCompanyClientsSortByNames}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card m-b-0 b-r-0">
+            <div class="card-body">
+                <div class="row">
+                    <h6>5.- getExpensesSortByAmount:</h6>
+                    <div class="col-md-12">
+                        <p>{{data.getExpensesSortByAmount}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card m-b-0 b-r-0">
+            <div class="card-body">
+                <div class="row">
+                    <h6>6.- getCompaniesSortByProfits:</h6>
+                    <div class="col-md-12">
+                        <p>{{data.getCompaniesSortByProfits}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card m-b-0 b-r-0">
+            <div class="card-body">
+                <div class="row">
+                    <h6>7.- getCompanyClientsNumber:</h6>
+                    <div class="col-md-12">
+                        <p>{{data.getCompanyClientsNumber}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card m-b-0 b-r-0">
+            <div class="card-body">
+                <div class="row">
+                    <h6>8.- getClientsWithLessExpense:</h6>
+                    <div class="col-md-12">
+                        <p>{{data.getClientsWithLessExpense}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card m-b-0 b-r-0">
+            <div class="card-body">
+                <div class="row">
+                    <h6>9.- newClientRanking:</h6>
+                    <div class="col-md-12">
+                        <p>{{data.newClientRanking}}</p>
                     </div>
                 </div>
             </div>
