--- a/viewer/templates/partial/nav.html
+++ b/viewer/templates/partial/nav.html
@@ -1,5 +1,5 @@
 {% load static %}
-<header class="main-nav">
+<header class="main-nav" style="top: 2rem;">
     <div class="logo-wrapper">
         <a href="{% url 'viewer:dashboard' %}">
             <img class="img-fluid" src="{% static 'assets/images/logo/logo.png' %}" width="165">
