--- a/viewer/templates/partial/header.html
+++ b/viewer/templates/partial/header.html
@@ -18,7 +18,7 @@
             </ul>
         </div>
         <div class="nav-right col pull-right right-menu">
-            <ul class="nav-menus">
+            <ul class="nav-menus"  style="top:2rem;">
                 <li class="onhover-dropdown d-none">
                     <div class="notification-box"><i data-feather="bell"></i><span
                             class="badge badge-pill badge-secondary">2</span></div>
